--- a/assignment0/index.html
+++ b/assignment0/index.html
@@ -1,12 +1,160 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World!</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>WeddingHub</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <h1>Hello World!</h1>
-    <p>Welcome to my first HTML page.</p>
+  <!-- Header Section -->
+  <header>
+    <h1>Welcome to WeddingHub</h1>
+  </header>
+
+  <!-- Navigation Bar -->
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About Us</a></li>
+      <li><a href="schedule.html">Schedule</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
+    </ul>
+  </nav>
+
+  <!-- Main Content -->
+  <main>
+    <p>WeddingHub helps couples plan their perfect wedding day by keeping everything in one place.</p>
+    <div class="floral-divider"></div>
+  </main>
+
+  <!-- Footer with contact and validation links -->
+  <footer>
+    <p>&copy; 2025 WeddingHub | <a href="mailto:zinzalayag@gmail.com">zinzalayag@gmail.com</a> | Phone: 336.340.2060</p>
+    <a href="https://validator.w3.org/check?uri=referer" referrerpolicy="unsafe-url">Validate HTML</a><br />
+    <a href="https://jigsaw.w3.org/css-validator/check/referer" referrerpolicy="unsafe-url">Validate CSS</a>
+  </footer>
+</body>
+</html>
+<!-- about.html -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>About Us - WeddingHub</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+  <!-- Header Section -->
+  <header>
+    <h1>About the Couple</h1>
+  </header>
+
+  <!-- Navigation Bar -->
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About Us</a></li>
+      <li><a href="schedule.html">Schedule</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
+    </ul>
+  </nav>
+
+  <!-- Main Content -->
+  <main>
+    <p>Learn more about the happy couple and their journey together!</p>
+    <div class="floral-divider"></div>
+  </main>
+
+  <!-- Footer with contact and validation links -->
+  <footer>
+    <p>&copy; 2025 WeddingHub | <a href="mailto:zinzalayag@gmail.com">zinzalayag@gmail.com</a> | Phone: 336.340.2060</p>
+    <a href="https://validator.w3.org/check?uri=referer" referrerpolicy="unsafe-url">Validate HTML</a><br />
+    <a href="https://jigsaw.w3.org/css-validator/check/referer" referrerpolicy="unsafe-url">Validate CSS</a>
+  </footer>
+</body>
+</html>
+<!-- schedule.html -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Schedule - WeddingHub</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+  <!-- Header Section -->
+  <header>
+    <h1>Wedding Schedule</h1>
+  </header>
+
+  <!-- Navigation Bar -->
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About Us</a></li>
+      <li><a href="schedule.html">Schedule</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
+    </ul>
+  </nav>
+
+  <!-- Main Content -->
+  <main>
+    <p>Here's the full itinerary for the big day, from ceremony to reception.</p>
+    <div class="floral-divider"></div>
+  </main>
+
+  <!-- Footer with contact and validation links -->
+  <footer>
+    <p>&copy; 2025 WeddingHub | <a href="mailto:zinzalayag@gmail.com">zinzalayag@gmail.com</a> | Phone: 336.340.2060</p>
+    <a href="https://validator.w3.org/check?uri=referer" referrerpolicy="unsafe-url">Validate HTML</a><br />
+    <a href="https://jigsaw.w3.org/css-validator/check/referer" referrerpolicy="unsafe-url">Validate CSS</a>
+  </footer>
+</body>
+</html>
+<!-- gallery.html -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Gallery - WeddingHub</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+  <!-- Header Section -->
+  <header>
+    <h1>Wedding Gallery</h1>
+  </header>
+
+  <!-- Navigation Bar -->
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About Us</a></li>
+      <li><a href="schedule.html">Schedule</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
+    </ul>
+  </nav>
+
+  <!-- Main Content -->
+  <main>
+    <div class="gallery">
+      <img src="bride.jpg" alt="Bride" />
+      <img src="decor.jpg" alt="Wedding Decor" />
+      <img src="couple.jpg" alt="Bride and Groom" />
+    </div>
+    <div class="floral-divider"></div>
+  </main>
+
+  <!-- Footer with contact and validation links -->
+  <footer>
+    <p>&copy; 2025 WeddingHub | <a href="mailto:zinzalayag@gmail.com">zinzalayag@gmail.com</a> | Phone: 336.340.2060</p>
+    <a href="https://validator.w3.org/check?uri=referer" referrerpolicy="unsafe-url">Validate HTML</a><br />
+    <a href="https://jigsaw.w3.org/css-validator/check/referer" referrerpolicy="unsafe-url">Validate CSS</a>
+  </footer>
 </body>
 </html>
