--- a/assignment0/index.html
+++ b/assignment0/index.html
@@ -27,6 +27,12 @@
   <main>
     <p>WeddingHub helps couples plan their perfect wedding day by keeping everything in one place.</p>
     <div class="floral-divider"></div>
+
+    <!-- AJAX Quote Section -->
+    <section id="quoteSection">
+      <h2>Daily Wedding Inspiration</h2>
+      <p id="quoteBox">Loading quote...</p>
+    </section>
   </main>
 
   <!-- Footer with contact and validation links -->
@@ -35,263 +41,9 @@
     <a href="https://validator.w3.org/check?uri=referer" referrerpolicy="unsafe-url">Validate HTML</a><br />
     <a href="https://jigsaw.w3.org/css-validator/check/referer" referrerpolicy="unsafe-url">Validate CSS</a>
   </footer>
-</body>
-</html>
-<!-- about.html -->
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About Us - WeddingHub</title>
-  <link rel="stylesheet" href="styles.css" />
-</head>
-<body>
-  <!-- Header Section -->
-  <header>
-    <h1>About the Couple</h1>
-  </header>
 
-  <!-- Navigation Bar -->
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About Us</a></li>
-      <li><a href="schedule.html">Schedule</a></li>
-      <li><a href="gallery.html">Gallery</a></li>
-    </ul>
-  </nav>
-
-  <!-- Main Content -->
-  <main>
-    <p>Learn more about the happy couple and their journey together!</p>
-    <div class="floral-divider"></div>
-  </main>
-
-  <!-- Footer with contact and validation links -->
-  <footer>
-    <p>&copy; 2025 WeddingHub | <a href="mailto:zinzalayag@gmail.com">zinzalayag@gmail.com</a> | Phone: 336.340.2060</p>
-    <a href="https://validator.w3.org/check?uri=referer" referrerpolicy="unsafe-url">Validate HTML</a><br />
-    <a href="https://jigsaw.w3.org/css-validator/check/referer" referrerpolicy="unsafe-url">Validate CSS</a>
-  </footer>
-</body>
-</html>
-<!-- schedule.html -->
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Schedule - WeddingHub</title>
-  <link rel="stylesheet" href="styles.css" />
-</head>
-<body>
-  <!-- Header Section -->
-  <header>
-    <h1>Wedding Schedule</h1>
-  </header>
-
-  <!-- Navigation Bar -->
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About Us</a></li>
-      <li><a href="schedule.html">Schedule</a></li>
-      <li><a href="gallery.html">Gallery</a></li>
-    </ul>
-  </nav>
-
-  <!-- Main Content -->
-  <main>
-    <p>Here's the full itinerary for the big day, from ceremony to reception.</p>
-    <div class="floral-divider"></div>
-  </main>
-
-  <!-- Footer with contact and validation links -->
-  <footer>
-    <p>&copy; 2025 WeddingHub | <a href="mailto:zinzalayag@gmail.com">zinzalayag@gmail.com</a> | Phone: 336.340.2060</p>
-    <a href="https://validator.w3.org/check?uri=referer" referrerpolicy="unsafe-url">Validate HTML</a><br />
-    <a href="https://jigsaw.w3.org/css-validator/check/referer" referrerpolicy="unsafe-url">Validate CSS</a>
-  </footer>
-</body>
-</html>
-<!-- gallery.html -->
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Gallery - WeddingHub</title>
-  <link rel="stylesheet" href="styles.css" />
-</head>
-<body>
-  <!-- Header Section -->
-  <header>
-    <h1>Wedding Gallery</h1>
-  </header>
-
-  <!-- Navigation Bar -->
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About Us</a></li>
-      <li><a href="schedule.html">Schedule</a></li>
-      <li><a href="gallery.html">Gallery</a></li>
-    </ul>
-  </nav>
-
-  <!-- Main Content -->
-  <main>
-    <div class="gallery">
-      <img src="bride.jpg" alt="Bride" />
-      <img src="decor.jpg" alt="Wedding Decor" />
-      <img src="couple.jpg" alt="Bride and Groom" />
-    </div>
-    <div class="floral-divider"></div>
-  </main>
-
-  <!-- Footer with contact and validation links -->
-  <footer>
-    <p>&copy; 2025 WeddingHub | <a href="mailto:zinzalayag@gmail.com">zinzalayag@gmail.com</a> | Phone: 336.340.2060</p>
-    <a href="https://validator.w3.org/check?uri=referer" referrerpolicy="unsafe-url">Validate HTML</a><br />
-    <a href="https://jigsaw.w3.org/css-validator/check/referer" referrerpolicy="unsafe-url">Validate CSS</a>
-  </footer>
+  <!-- Link to external JavaScript file -->
+  <script src="script.js"></script>
 </body>
 </html>
 
-/* styles.css */
-
-/* Import Google Fonts: Great Vibes for cursive (site name), and Lora for body text */
-@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Lora&display=swap');
-
-/* ===== Global Styles ===== */
-body {
-  font-family: 'Lora', serif; /* Elegant serif font for paragraphs and general text */
-  font-size: 18px;             /* Comfortable reading size */
-  line-height: 1.6;            /* Adequate spacing between lines */
-  color: #333333;              /* Dark gray for easy reading */
-  background-color: #fafafa;   /* Light, subtle background */
-  margin: 0;
-  padding: 0;
-}
-
-/* ===== Header Styles ===== */
-header {
-  background-color: #f8f4f0;  /* Soft warm background */
-  padding: 20px 0;
-  text-align: center;
-  border-bottom: 1px solid #ddd;
-}
-
-/* Site name with cursive font */
-header h1 {
-  font-family: 'Great Vibes', cursive;
-  font-size: 3rem;
-  color: #a45c40;              /* Elegant warm brown */
-  margin: 0;
-}
-
-/* ===== Navigation Bar Styles ===== */
-nav {
-  background-color: #a45c40;  /* Matches header text color */
-  text-align: center;
-  padding: 10px 0;
-}
-
-nav ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  display: inline-flex;       /* Horizontal menu */
-  gap: 25px;                  /* Spacing between links */
-}
-
-nav ul li a {
-  text-decoration: none;
-  color: #fafafa;             /* Light color for contrast */
-  font-weight: 600;
-  font-size: 1.1rem;
-  transition: color 0.3s ease;
-}
-
-nav ul li a:hover,
-nav ul li a:focus {
-  color: #ffd6a5;             /* Light peach highlight on hover */
-  outline: none;
-}
-
-/* ===== Main Content Styles ===== */
-main {
-  max-width: 900px;
-  margin: 40px auto;
-  padding: 0 20px;
-  text-align: center;
-}
-
-main p {
-  margin-bottom: 30px;
-}
-
-/* Floral divider placeholder style */
-.floral-divider {
-  width: 100%;
-  height: 10px;
-  background: url('floral-divider.png') center no-repeat;
-  background-size: contain;
-  margin: 30px 0;
-}
-
-/* ===== Gallery Styles ===== */
-.gallery {
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-  flex-wrap: wrap;
-}
-
-.gallery img {
-  max-width: 280px;
-  height: auto;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(164, 92, 64, 0.3);
-  transition: transform 0.3s ease;
-}
-
-.gallery img:hover {
-  transform: scale(1.05);
-}
-
-/* ===== Footer Styles ===== */
-footer {
-  background-color: #f8f4f0;
-  padding: 20px 10px;
-  text-align: center;
-  border-top: 1px solid #ddd;
-  font-size: 0.9rem;
-  color: #666666;
-}
-
-footer a {
-  color: #a45c40;
-  text-decoration: none;
-}
-
-footer a:hover,
-footer a:focus {
-  text-decoration: underline;
-  outline: none;
-}
-
-/* ===== Responsive Text and Layout (Optional) ===== */
-/* Not required per instructions, but good practice */
-@media (max-width: 600px) {
-  nav ul {
-    flex-direction: column;
-    gap: 15px;
-  }
-  
-  .gallery {
-    flex-direction: column;
-    align-items: center;
-  }
-}
